# KF-GINS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_CN.md  ref.bib
config/: kf-gins.yaml
dataset/: GNSS-RTK.txt  kf-gins.yaml
docs/: KF-GINS-Introduction-Video.txt  kf-gins-algorithm-docs.tex  kf-gins-docs.tex
scripts/: plot_navresult.py
src/: kf_gins.cpp
src/common/: angle.h  earth.h  logging.h  rotation.h  types.h
src/fileio/: filebase.h  fileloader.cc  fileloader.h  filesaver.cc  filesaver.h  gnssfileloader.h  imufileloader.h
src/kf-gins/: gi_engine.cpp  gi_engine.h  insmech.cpp  insmech.h  kf_gins_types.h
